resources/ej2-base/releasenotes/Xamarin-iOS/Release-Notes/v14.4.0.20/DocIO.md
## DocIO

### Bug Fixes
{:#DocIO-bug-fixes}

* \#165843 - List number preservation issue has been resolved while importing a particular Word document.
* \#167934 - `TextFormField` is now preserved properly while replacing a bookmark contents.
* \#168028 - IndexOutOfRangeException will no longer thrown while opening a particular DOCX format document.
* \#167568, \#167582 - NullReferenceException will no longer thrown while opening a particular DOCX format document.
* \#167600 - ArgumentException will no longer thrown while opening a particular DOCX format document.
* \#167568 - File is no longer corrupted while resaving a particular DOCX format document.
* \#166885 - StackOverflowException will no longer thrown while updating document fields for a particular Word document.
* \#167189 - IndexOutofRangeException will no longer thrown while retrieving the bookmark content.